# newssys

./: .env.example  .env.production  .gitignore  DEPLOYMENT.md  init_sitemap_tables.py  init_tasks_tables.py  pyproject.toml  requirements.txt  schema.sql  test_sitemap.py
docs/: convert_to_pdf.py  convert_to_pdf_v2.py  send_email.py  用户手册.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useDashboard.ts  useReports.ts
frontend/src/pages/: ArticleDetailPage.tsx  ArticlesPage.tsx  ChatPage.tsx  DashboardPage.tsx  GoogleSearchPage.tsx  LoginPage.tsx  OsintToolsPage.tsx  ReportDetailPage.tsx  ReportsPage.tsx  SchedulesPage.tsx  SearchPage.tsx  SettingsPage.tsx  SitemapsPage.tsx  SocialMediaSearchPage.tsx  SourcesPage.tsx  TasksPage.tsx  TemplatesPage.tsx  TwitterSearchPage.tsx  (+1 more)
migrations/: 001_add_sitemap_tables.sql  002_add_tasks_table.sql  002_schema_stabilization.py  002_schema_stabilization.sql  003_add_schedules_and_keywords.py  004_add_conversations_table.sql  005_add_reports_tables.sql  006_add_users_table.py  README.md
scripts/: backup_database.py  init_database.py  refetch_articles.py  seed_sources.py  sync_articles.py  test_pipeline.py
src/api/: __init__.py  main.py  schemas.py
src/core/: auth.py  config.py  database.py  models.py  orm_models.py
src/infrastructure/: config.py  database.py
src/repository/: article_repository.py  base.py  conversation_repository.py  keyword_repository.py  pending_article_repository.py  report_repository.py  schedule_repository.py  sitemap_repository.py  source_repository.py  task_repository.py  user_repository.py
src/services/: aggregator.py  ai_agent.py  article_clustering.py  citation.py  collector.py  compressor.py  event_extraction.py  keyword_generator.py  openai_client.py  report_agent.py  report_generator.py  robots_handler.py  schedule_executor.py  scheduler_service.py  scraper.py  search_engine.py  simhash.py  site_discovery.py  sitemap_parser.py  sitemap_service.py  smart_extractor.py  task_executors.py  task_manager.py  template.py  time_extractor.py  universal_scraper.py
(+37 files in other folders)
