[project]
name = "newssys"
version = "2.0.0"
description = "智能新闻处理系统"
readme = "DEPLOYMENT.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心依赖
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    "aiomysql>=0.2.0",
    "greenlet>=3.0.0",

    # HTTP 客户端
    "httpx>=0.25.2",

    # HTML 解析
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",

    # 内容处理
    "html2text>=2020.1.16",

    # 时间解析（多语言支持）
    "dateparser>=1.2.0",

    # 联网搜索
    "duckduckgo-search>=4.1.1",

    # 工具库
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",

    # 代码质量
    "ruff>=0.1.8",
    "mypy>=1.7.1",

    # 类型存根
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
